# ocf-iam4vp

./: .gitignore  README.md  model.py  pyproject.toml  run.py  validate_baskerville.sh  validate_config.yml
src/ocf_iam4vp/: __init__.py  iam4vp.py  iam4vp_lightning.py  modules.py
