[project]
name = "ocf-iam4vp"
authors = [
    {name = "Alan Turing Institute", email = "clouds@turing.ac.uk"},
]
version = "0.1.0"
description = "Implementation of Implicit Stacked Autoregressive Model for Video Prediction (IAM4VP) to cloudcasting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudcasting @ git+https://github.com/alan-turing-institute/cloudcasting.git@v0.4.0",
    "einops",
    "timm",
    "torch",
]
